--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
   "name": "capacitor-app",
   "version": "1.0.0",
-  "description": "An Amazing Capacitor App",
+  "description": "A template Capacitor App",
   "main": "src/index.js",
   "scripts": {
     "build": "cp bridge.js src && webpack --config webpack/prod.js && npx cap copy && npx cap sync && npx cap open ios",
     "update-plugins": "npx cap update"
   },
-  "keywords": [
-    "capacitor",
-    "mobile"
-  ],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@capacitor/android": "^1.0.0",
     "@capacitor/cli": "^1.0.0",
